--- a/social_media/media-service/package.json
+++ b/social_media/media-service/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "amqplib": "^0.10.5",
+    "cloudinary": "^2.5.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
@@ -21,6 +22,7 @@
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.5",
+    "multer": "1.4.5-lts.1",
     "nodemon": "^3.1.9",
     "winston": "^3.17.0"
   }
